--- a/vignettes/reproducibility.Rmd
+++ b/vignettes/reproducibility.Rmd
@@ -53,7 +53,7 @@ grid.arrange(g1a,g1b,g1c,nrow=1)
 
 The following code reproduces Figure 2: First, we perform a simulation study. Second, we create the figure.
 
-```{r}
+```{r cache=TRUE}
 ## Perform simulation study
 set.seed(1)
 results <- matrix(NA,nrow=0,ncol=6)
@@ -68,40 +68,54 @@ for(iter in 1:20){
           while(length(unique(ybar))<K){ybar <- sample(1:K,J,replace=T)}
         }
         
-        mcmc <- mcmc_RCMVN(ybar=ybar,s=rep(s,J),mu=mean(ybar),sigma0=max(1,4*sd(ybar)),nu0=ybar,
-                           tau=1,num_iters=30,nu_reps=2,chains=4, #FIX:3000
+        mcmc <- mcmc_RCMVN(ybar=ybar,s=rep(s,J),mu=mean(ybar),
+                           sigma0=max(1,4*sd(ybar)),nu0=ybar,
+                           tau=1,num_iters=300,nu_reps=2,chains=4, #FIX:3000
                            burn_prop=0.5,thin=3,suppressPrint=TRUE)
         
         equal <- posterior_equal <- matrix(NA,nrow=J,ncol=J)
         for(i in 1:(J-1)){for(j in (i+1):J){
           equal[i,j] <- ifelse(ybar[i]==ybar[j],1,0) # test if treatments are truly equal in mean
-          posterior_equal[i,j] <- mean(mcmc[,paste0("G",i)] == mcmc[,paste0("G",j)]) # assess if treatments are rank-clustered
+          posterior_equal[i,j] <- mean( # assess if treatments are rank-clustered
+            mcmc[,paste0("G",i)] == mcmc[,paste0("G",j)]
+            ) 
         }}
         
         results <- rbind(
           results,
-          c(iter,J,K,s,mean(posterior_equal[equal==1],na.rm=T),mean(posterior_equal[equal==0],na.rm=T))
+          c(iter,J,K,s,
+            mean(posterior_equal[equal==1],na.rm=T),
+            mean(posterior_equal[equal==0],na.rm=T))
         )
       }
     }
   }
 }
-
+```
+```{r}
 ## Plotting results from simulation study
 results <- as.data.frame(results)
 names(results) <- c("Iteration","J","K","s","Prob_Clustered","Prob_Distinct")
 results$s<-factor(results$s, levels=c(.1,.3,.5),
-                  labels=c(expression(hat(sigma)~"=0.1"),expression(hat(sigma)~"=0.3"),expression(hat(sigma)~"=0.5")))
-results$J <- factor(results$J,levels=c(6,12,18),labels=c(expression(J~"= 6"),expression(J~"= 12"),expression(J~"= 18")))
+                  labels=c(expression(hat(sigma)~"=0.1"),
+                           expression(hat(sigma)~"=0.3"),
+                           expression(hat(sigma)~"=0.5")))
+results$J <- factor(results$J,levels=c(6,12,18),
+                    labels=c(expression(J~"= 6"),
+                             expression(J~"= 12"),
+                             expression(J~"= 18")))
 results_melt <- melt(results,id.vars=1:4)
 results_melt <- results_melt[!is.nan(results_melt$value),] # drop "cluster" cases when K=J
-ggplot(results_melt,aes(x=factor(K),y=value,color=factor(variable,labels=c("Rank-Clustered","Distinct"))))+
+ggplot(results_melt,aes(x=factor(K),y=value,
+                        color=factor(variable,labels=c("Rank-Clustered","Distinct"))))+
   facet_grid(s~J,scales="free_x",labeller=label_parsed)+
   geom_boxplot(outlier.alpha=0.5,position="identity")+theme_bw()+
   scale_color_manual(values=c("skyblue","darkblue"))+
-  labs(x="Number of Rank-Clusters, K",y="Posterior Rank-Clustering Probability",
+  labs(x="Number of Rank-Clusters, K",
+       y="Posterior Rank-Clustering Probability",
        color=NULL)+
-  theme(legend.position = "bottom",panel.grid.minor = element_blank(),
+  theme(legend.position = "bottom",
+        panel.grid.minor = element_blank(),
         panel.grid.major.x = element_blank())
 ```
 
