--- a/vignettes/reproducibility.Rmd
+++ b/vignettes/reproducibility.Rmd
@@ -1,6 +1,11 @@
 ---
 title: "Reproducibility"
-output: rmarkdown::html_vignette
+output:
+  rmarkdown::html_document:
+    toc: true
+    toc_depth: 3
+    toc_float: true  
+number_sections: true  
 vignette: >
   %\VignetteIndexEntry{reproducibility}
   %\VignetteEngine{knitr::rmarkdown}
